feat: Пройти тесты postman для модели user